--- a/css/style.css
+++ b/css/style.css
@@ -79,19 +79,20 @@ header img {
 p {
     margin: 5px 20px 5px 20px;
     text-align: justify;
-    
+
 
 
 }
+
 main {
     grid-area: main;
 
 
 }
-img{
-    max-width:100%
-    object-fit contain ;
- }
+
+img {
+    max-width: 100% object-fit contain;
+}
 
 main .encabezadosDeseccion h1 {
     display: flex;
@@ -105,7 +106,7 @@ main .encabezadosDeseccion h2 {
     display: flex;
     justify-content: center;
     margin: 100px 10px 100px 10px;
-    
+
 
 }
 
@@ -162,7 +163,7 @@ section .boxNewslatter form {
 
 }
 
-    
+
 main .boxNewslatter h2 {
     text-align: center;
     margin-top: 50px;
@@ -218,7 +219,7 @@ footer ul li .encabezadosDeseccion {
 footer ul li img {
     width: 50px;
     object-fit: contain;
-    
+
 
 }
 
@@ -262,8 +263,8 @@ body {
         height: 100%;/
     }
 }
-      
-    
+
+
 
 
 
@@ -285,51 +286,48 @@ body {
         height: 100%;/
     }
 }
-    @media screen and (max-widht: 425px) {
 
-        body {
-            grid-template-areas:
-                "header"
-                "nav"
-                "nav"
-                "main"
-                "pie";
-            
-            grid-template-rows: 100px 1fr 1fr auto 1fr;
-        }
-        header nav {
-            background-color: rgba(3, 53, 25, 0.986);
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            opacity: 0.7;
-        
-        
-        }
+@media screen and (max-widht: 425px) {
+
+    body {
+        grid-template-areas:
+            "header"
+            "nav"
+            "nav"
+            "main"
+            "pie";
+
+        grid-template-rows: 100px 1fr 1fr auto 1fr;
+    }
+
+    header nav {
+        background-color: rgba(3, 53, 25, 0.986);
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        opacity: 0.7;
+
+
+    }
+
+    .ultimoGpdisputado #img {
+        width: 100%;
+        height: 100%;/
+    }
+
     
-        .ultimoGpdisputado #img {
-            width: 100%;
-            height: 100%;/
-        }
-        
-        header nav ul li {
-            margin; 0 : 
-            padding:  0
-            justify-content: center;
-            flex-wrap:nowrap
-          display: flex: 
-        }
-        main .box {
-            display:flex;
-            background-color: gainsboro;
-            margin: 40px 10px 10px 16px;
-            border-radius: 5px;
-            box-shadow: 5px 5px 15px gray;
-            overflow: hidden;
-            align-items: center;
-            
-            
-        }
-        
-        
+
+    main .box {
+        display: flex;
+        background-color: gainsboro;
+        margin: 40px 10px 10px 16px;
+        border-radius: 5px;
+        box-shadow: 5px 5px 15px gray;
+        overflow: hidden;
+        align-items: center;
+
+
+    }
+
+
 }
