--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,10 @@ body {
     margin: 0;
     padding: 0;
 }
-
+.tituloDelapagina h1{
+    color:#cedc00;
+    
+}
 
 a {
     text-decoration: none;
@@ -39,6 +42,23 @@ header nav ul {
     opacity: 0.7;
 
 
+}
+.bg-body-tertiary {
+    --bs-bg-opacity: 0;
+    
+}
+.navbar {
+    --bs-navbar-color: rgba(var(--bs-emphasis-color-rgb), 0.95);
+    --bs-navbar-toggler-border-color: rgba(var(--bs-emphasis-color-rgb), 0 );
+    --bs-navbar-toggler-transition: box-shadow 0.15s cubic-bezier(0, 0, 0, 1.13)-out;
+    --bs-navbar-active-color: white
+    
+}
+.nav-link {
+    color: #cedc00;
+    --bs-emphasis-color: rgb(255, 255, 255);
+  
+    
 }
 
 header {
@@ -70,7 +90,7 @@ header nav ul li {
 header img {
     width: 70px;
     display: flex;
-    object-fit: contain;
+    object-fit:fill;
 
 }
 
@@ -89,9 +109,14 @@ main {
 
 
 }
-
+.articulosDeblog {
+    display: flex;
+    justify-content: center;
+    
+}
 img {
-    max-width: 100% object-fit contain;
+    max-width: 100% 
+    
 }
 
 main .encabezadosDeseccion h1 {
@@ -260,7 +285,11 @@ body {
 
     .ultimoGpdisputado #img {
         width: 100%;
-        height: 100%;/
+        height: 100%;
+    }
+    img {
+        max-width: 100% 
+        object-fit cover;
     }
 }
 
@@ -285,7 +314,15 @@ body {
         width: 100%;
         height: 100%;/
     }
+    img {
+        max-width: 100% 
+        object-fit cover;
+    }
 }
+.nav{
+    flex-direction: column;
+}
+
 
 @media screen and (max-widht: 425px) {
 
@@ -298,6 +335,7 @@ body {
             "pie";
 
         grid-template-rows: 100px 1fr 1fr auto 1fr;
+        display: flex;
     }
 
     header nav {
@@ -305,14 +343,15 @@ body {
         width: 100%;
         display: flex;
         flex-direction: column;
-        opacity: 0.7;
+        
 
 
     }
 
     .ultimoGpdisputado #img {
         width: 100%;
-        height: 100%;/
+        height: 100%;
+        
     }
 
     
@@ -328,6 +367,9 @@ body {
 
 
     }
-
+    img {
+        max-width: 100% 
+        object-fit cover;
+    }
 
 }
