--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,15 @@ body {
     margin: 0;
     padding: 0;
 }
-.tituloDelapagina h1{
-    color:#cedc00;
-    
+
+.tituloDelapagina h1 {
+    color: #cedc00;
+
 }
 
 a {
     text-decoration: none;
-    color: white;
+    color: #cedc00;
 }
 
 ul,
@@ -43,22 +44,24 @@ header nav ul {
 
 
 }
+
 .bg-body-tertiary {
     --bs-bg-opacity: 0;
-    
+
 }
+
 .navbar {
     --bs-navbar-color: rgba(var(--bs-emphasis-color-rgb), 0.95);
-    --bs-navbar-toggler-border-color: rgba(var(--bs-emphasis-color-rgb), 0 );
+    --bs-navbar-toggler-border-color: rgba(var(--bs-emphasis-color-rgb), 0);
     --bs-navbar-toggler-transition: box-shadow 0.15s cubic-bezier(0, 0, 0, 1.13)-out;
     --bs-navbar-active-color: white
-    
 }
+
 .nav-link {
     color: #cedc00;
     --bs-emphasis-color: rgb(255, 255, 255);
-  
-    
+
+
 }
 
 header {
@@ -67,6 +70,11 @@ header {
 
 
 
+}
+
+.nav {
+    flex-direction: column;
+    align-content: center;
 }
 
 nav {
@@ -90,7 +98,7 @@ header nav ul li {
 header img {
     width: 70px;
     display: flex;
-    object-fit:fill;
+    object-fit: fill;
 
 }
 
@@ -109,14 +117,44 @@ main {
 
 
 }
-.articulosDeblog {
-    display: flex;
+
+main .articulosDeblog {
     justify-content: center;
-    
+
+
 }
+
 img {
-    max-width: 100% 
-    
+    max-width: 100%
+}
+
+main .linkReferencial {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2px 2px 2px 2px;
+}
+
+main .textosDelgp p {
+    display: flex;
+    padding: 2px 2px 2px 2px;
+    align-items: flex-start;
+}
+
+main .linkReferencial .enlaceReferencial1 {
+    padding: 2px 2px 2px 2px;
+    color: #cedc00;
+}
+
+main .imagen2 {
+    max-width: 100%;
+    margin-top: 20px;
+}
+
+main .imagen1 {
+    max-width: 100%;
+    margin-top: 20px;
 }
 
 main .encabezadosDeseccion h1 {
@@ -131,6 +169,16 @@ main .encabezadosDeseccion h2 {
     display: flex;
     justify-content: center;
     margin: 100px 10px 100px 10px;
+
+
+}
+
+main .encabezadosDeseccion2 h2 {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 90px;
+
 
 
 }
@@ -150,14 +198,17 @@ main .ultimoGpdisputado .portadaDelhome img {
 main .box {
     display: inline-flex;
     background-color: gainsboro;
-    margin: 40px 10px 10px 10px;
+    margin: 40px 13px 10px 13px;
     border-radius: 5px;
     box-shadow: 5px 5px 15px gray;
     overflow: hidden;
     align-items: center;
     width: 355px;
+    justify-content: center;
+    padding: 16px;
 
 }
+
 
 .tituloDelapagina {
     display: flex;
@@ -166,18 +217,18 @@ main .box {
 
 main .boxNewslatter {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: gainsboro;
-    margin: 40px 10px 10px 10px;
+    margin: 40px 10px;
+    padding: 20px;
     border-radius: 5px;
     box-shadow: 5px 5px 15px gray;
     overflow: hidden;
-    align-content: center;
-    width: 500px;
-    height: 500px;
-    flex-direction: column;
-    flex-wrap: wrap;
-
-
+    width: 700px;
+    max-width: 100%;
+    height: auto;
 }
 
 section .boxNewslatter form {
@@ -186,7 +237,20 @@ section .boxNewslatter form {
     justify-content: center;
 
 
+
 }
+
+section .boxNewslatter .formularioDecontacto .labelsDeformulario {
+
+    flex-flow: column;
+    justify-content: center;
+    flex-flow: column;
+    flex-direction: column;
+    margin: 10px 10px 10px 10px;
+    padding: 5px 5px 5px 5px;
+
+}
+
 
 
 main .boxNewslatter h2 {
@@ -195,7 +259,7 @@ main .boxNewslatter h2 {
 
 }
 
-main .box .tarjeta img {
+main .box img {
     width: 90px;
     align-content: center;
     padding: 5px 5px 5px 5px;
@@ -271,33 +335,149 @@ body {
     grid-template-rows: 100px 1 1fr 100%;
 }
 
-@media screen and (max-widht: 1024x) {
+@media screen and (max-width: 1024px) {
 
     body {
         grid-template-areas:
-            "header header "
-            "nav   nav"
-            "main main "
-            "pie pie ";
-        grid-template-columns: 150px 1fr;
-        grid-template-rows: 100px 1 auto 1fr;
+            "header header"
+            "nav nav"
+            "main main"
+            "pie pie";
+        grid-template-columns: 512px 512px;
+        grid-template-rows: 150px 20px auto 1fr;
+    }
+
+    main .box {
+        display: inline-flex;
+        background-color: gainsboro;
+        margin: 53px 67px;
+        border-radius: 5px;
+        box-shadow: 5px 5px 15px gray;
+        overflow: hidden;
+    }
+
+    .tituloDelapagina {
+        padding: 30px;
+    }
+
+    .nav {
+        flex-direction: column;
+        background-color: #07371c;
+    }
+
+    main .encabezadosDeseccion h1,
+    main .tituloDelapagina h1,
+    main .tituloDelapagina h2,
+    main .encabezadosDeseccion h2 {
+        display: flex;
+        justify-content: center;
+        margin-top: 40px;
+        margin-bottom: 20px;
     }
 
     .ultimoGpdisputado #img {
         width: 100%;
         height: 100%;
     }
+
     img {
-        max-width: 100% 
-        object-fit cover;
+        max-width: 100%;
+        object-fit: cover;
+    }
+}
+
+main .boxNewslatter {
+    width: 512px;
+    height: 512px;
+}
+
+
+
+@media screen and (max-width: 768px) {
+
+    .tituloDelapagina {
+
+        padding: 10px;
+    }
+
+    body {
+        grid-template-areas:
+            "header header"
+            "nav nav"
+            "main main"
+            "pie pie";
+        grid-template-columns: 384px 384px;
+        grid-template-rows: 100px 300px auto 1fr;
+    }
+
+    main .box {
+        display: inline-flex;
+        background-color: gainsboro;
+        margin: 53px 13px;
+        border-radius: 5px;
+        box-shadow: 5px 5px 15px gray;
+        overflow: hidden;
+    }
+
+    main .encabezadosDeseccion h1,
+    main .tituloDelapagina h1,
+    main .tituloDelapagina h2,
+    main .encabezadosDeseccion h2 {
+        display: flex;
+        justify-content: center;
+        margin-top: 40px;
+        margin-bottom: 20px;
+    }
+
+    .nav {
+        flex-direction: column;
+        background-color: #07371c;
+    }
+
+    main .boxNewslatter {
+        display: flex;
+        background-color: gainsboro;
+        margin: 40px 134px 10px 134px;
+        border-radius: 5px;
+        box-shadow: 5px 5px 15px gray;
+        overflow: hidden;
+        align-content: center;
+        width: 500px;
+        height: 500px;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+    .ultimoGpdisputado #img {
+        width: 100%;
+        height: 100%;
+    }
+
+    img {
+        max-width: 100%;
+        object-fit: cover;
+    }
+    footer .listaPie1 ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 10px 10px 10px;
+    }
+    footer .listaPie2 ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 10px 10px 10px;
+    }
+    footer .listaPie2 ul h2 {
+        display: flex;
+        flex-direction: column;
     }
 }
 
 
 
-
-
-@media screen and (max-widht: 768x) {
+@media screen and (max-width: 425px) {
 
     body {
         grid-template-areas:
@@ -307,69 +487,87 @@ body {
             "main"
             "pie";
         grid-template-columns: 150px;
-        grid-template-rows: 100px 1 auto 1fr;
+        grid-template-rows: 100px 1fr 1fr auto 1fr;
     }
-
-    .ultimoGpdisputado #img {
-        width: 100%;
-        height: 100%;/
-    }
-    img {
-        max-width: 100% 
-        object-fit cover;
-    }
-}
-.nav{
-    flex-direction: column;
-}
-
-
-@media screen and (max-widht: 425px) {
 
     body {
-        grid-template-areas:
-            "header"
-            "nav"
-            "nav"
-            "main"
-            "pie";
-
-        grid-template-rows: 100px 1fr 1fr auto 1fr;
-        display: flex;
+        display: block;
     }
 
-    header nav {
-        background-color: rgba(3, 53, 25, 0.986);
-        width: 100%;
-        display: flex;
+    .tituloDelapagina {
+
+        padding: 30px;
+    }
+
+    .nav {
         flex-direction: column;
-        
-
-
     }
 
     .ultimoGpdisputado #img {
         width: 100%;
         height: 100%;
-        
     }
 
-    
-
     main .box {
-        display: flex;
         background-color: gainsboro;
-        margin: 40px 10px 10px 16px;
+        margin: 40px 32px 10px 32px;
         border-radius: 5px;
         box-shadow: 5px 5px 15px gray;
         overflow: hidden;
         align-items: center;
+        justify-content: center;
+    }
 
+    main .boxNewslatter {
+        display: flex;
+        background-color: gainsboro;
+        margin: 16px 215px 18px 11px;
+        border-radius: 5px;
+        box-shadow: 5px 5px 15px gray;
+        overflow: hidden;
+        align-content: flex-end;
+        width: 400px;
+        height: 480px;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    main .boxNewslatter .labelsDeformulario {
+        display: flex;
+        flex-direction: column;
+        align-content: flex-end;
 
     }
+
+    main .encabezadosDeseccion h2 {
+        display: flex;
+        font-size: large;
+    }
+
+
+    .box {
+        margin: 40px 35px 10px 35px;
+    }
+
     img {
-        max-width: 100% 
-        object-fit cover;
+        max-width: 100%;
+        object-fit: cover;
     }
 
+    footer .listaPie1 ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 10px 10px 10px;
+    }
+    footer .listaPie2 ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 10px 10px 10px;
+    }
+    footer .listaPie2 ul h2 {
+        display: flex;
+        flex-direction: column;
+    }
 }
