--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,106 +1,25 @@
-body {
 
-    font-family: 'Poppins', sans-serif;
-    background-color: #bdbdbd;
-
-}
-
-/* Header */
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-.tituloDelapagina h1 {
-    color: #cedc00;
-
-}
-
-a {
-    text-decoration: none;
-    color: #cedc00;
-}
-
-ul,
-ol {
-    list-style: none;
-}
-
-header {
-    background-color: rgba(3, 53, 25, 0.986);
-
-
-
-}
-
-header nav ul {
-    background-color: rgba(3, 53, 25, 0.986);
-    width: auto;
-    display: flex;
-    justify-content: space-evenly;
-    opacity: 0.7;
-
-
-}
-
-.bg-body-tertiary {
-    --bs-bg-opacity: 0;
-
-}
-
-.navbar {
-    --bs-navbar-color: rgba(var(--bs-emphasis-color-rgb), 0.95);
-    --bs-navbar-toggler-border-color: rgba(var(--bs-emphasis-color-rgb), 0);
-    --bs-navbar-toggler-transition: box-shadow 0.15s cubic-bezier(0, 0, 0, 1.13)-out;
-    --bs-navbar-active-color: white
-}
-
-.nav-link {
-    color: #cedc00;
-    --bs-emphasis-color: rgb(255, 255, 255);
-
-
-}
-
-header {
-    top: 5px;
-    grid-area: header;
-
-
-
-}
-
-.nav {
-    flex-direction: column;
-    align-content: center;
-}
-
-nav {
-    grid-area: nav;
+@import "base/reset";
+@import "base/typography";
+@import "layout/header";
+@import "layout/navigation";
+@import "pages/home";
 
 
 
 
 
-}
-
-header nav ul li {
-    display: flex;
-    margin: 3px 3px 2px 3px;
-    padding: 5px 10px 5px 5px;
-    justify-content: center;
 
 
-}
 
-header img {
-    width: 70px;
-    display: flex;
-    object-fit: fill;
 
-}
+
+
+
+
+
+
+
 
 
 /*  Main */
@@ -124,9 +43,7 @@ main .articulosDeblog {
 
 }
 
-img {
-    max-width: 100%
-}
+
 
 main .linkReferencial {
     display: flex;
@@ -197,9 +114,7 @@ main .encabezadosDeseccion h4 {
 
 }
 
-main .ultimoGpdisputado .portadaDelhome img {
-    width: 100%;
-}
+
 
 
 main .box {
