--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,24 +7,15 @@
 @import "pages/blog";
 @import "layout/grid";
 @import "pages/gpDeabudhabi";
+@import "components/carrusel";
 
 
 
 
 
 
-main .imagen2 {
-    max-width: 100%;
-    margin-top: 20px;
-}
 
-main .imagen1 {
-    max-width: 100%;
-    margin-top: 20px;
-}
-main .carouselExampleCaptions {
-    color: #cedc00;
-}
+
    
 
 
