--- a/scss/pages/_blog.scss
+++ b/scss/pages/_blog.scss
@@ -2,5 +2,16 @@ main {
     .articulosDeblog {
         justify-content: center;
     }
-
+    .box {
+        display: inline-flex;
+        background-color: gainsboro;
+        margin: 50px 50px 10px 50px;
+        border-radius: 5px;
+        overflow: hidden;
+        align-items: center;
+        width: 355px;
+        justify-content: center;
+        padding: 16px;
+    
+    }
 }
