--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -6,21 +6,83 @@ main {
             }
         }
 
+
+
     }
-}
 
-.linkReferencial {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 2px 2px 0px 2px;
+    .textoDelmain {
+        p {
+            display: flex;
+            text-align: left;
+            width: 720px;
+
+        }
+    }
+
+    .encabezadosDeseccion {
+        h2 {
+            display: flex;
+            justify-content: center;
+            margin: 100px 10px 100px 10px;
+        }
+
+
+    }
+
+
+    .encabezadosDeseccion {
+        h1 {
+
+
+            display: flex;
+            justify-content: center;
+            margin-top: 50px;
+            margin-bottom: 90px;
+        }
+    }
+
+    .imagenDelmain {
+        display: flex;
+        justify-content: left;
+        width: 639px;
+        height: 545px;
+        margin: -389px 1023px 117px 835px;
+
+
+    }
+
+    .imagenDelmain2 {
+        display: flex;
+        justify-content: left;
+        width: 639px;
+        height: 545px;
+        margin: -662px 1102px 180px 1168px
+    }
+
+    .imagenDelmain3 {
+        display: flex;
+        justify-content: left;
+        width: 639px;
+        height: 545px;
+        margin: -724px 1102px 180px 1500px
+    }
+
+
+
+    .linkReferencial {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 2px 2px 0px 2px;
 
 
 
 
-}
-p {
-    margin: 5px 20px 5px 20px;
-    text-align: justify;
+    }
+
+    p {
+        margin: 5px 20px 5px 20px;
+        text-align: justify;
+    }
 }
