--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,9 @@ main p {
 main .articulosDeblog {
   justify-content: center;
 }
+main h3 {
+  text-align: center;
+}
 main .box {
   display: inline-flex;
   background-color: gainsboro;
@@ -129,6 +132,13 @@ main .box {
   width: 355px;
   justify-content: center;
   padding: 16px;
+}
+main .box img {
+  width: 90px;
+  align-content: center;
+  padding: 5px 5px 5px 5px;
+  margin: 10px 50px 10px 50px;
+  object-fit: contain;
 }
 
 header {
@@ -153,7 +163,7 @@ footer {
     grid-template-columns: 512px 512px;
     grid-template-rows: 150px 20px auto 1fr;
   }
-  main .box {
+  body .box {
     display: inline-flex;
     background-color: gainsboro;
     margin: 53px 67px;
@@ -161,59 +171,24 @@ footer {
     box-shadow: 5px 5px 15px gray;
     overflow: hidden;
   }
-  main .textoDelmain p {
+  body .box img {
+    max-width: 100%;
+    object-fit: cover;
+  }
+  body .textoDelmain p {
     display: flex;
     width: 388px;
     text-align: justify;
   }
-  main .imagenDelmain {
+  body .imagenDelmain,
+  body .imagenDelmain2,
+  body .imagenDelmain3 {
     display: none;
   }
-  main .imagenDelmain2 {
-    display: none;
-  }
-  main .imagenDelmain3 {
-    display: none;
-  }
-  .tituloDelapagina {
+  body .tituloDelapagina {
     padding: 30px;
   }
-  main .boxNewslatter h2 {
-    text-align: center;
-    margin: 10px -28px 10px -23px;
-  }
-  .nav {
-    flex-direction: column;
-    background-color: #07371c;
-  }
-  main .textoDelmain p {
-    display: flex;
-    text-align: justify;
-    width: 1000px;
-  }
-  main .encabezadosDeseccion h1,
-  main .tituloDelapagina h1,
-  main .tituloDelapagina h2,
-  main .encabezadosDeseccion h2 {
-    display: flex;
-    justify-content: center;
-    margin-top: 40px;
-    margin-bottom: 20px;
-  }
-  .ultimoGpdisputado #img {
-    width: 100%;
-    height: 100%;
-  }
-  main .box img {
-    display: flex;
-    align-items: center;
-    margin: 28px 114px;
-  }
-  img {
-    max-width: 100%;
-    object-fit: cover;
-  }
-  main .boxNewslatter {
+  body .boxNewslatter {
     display: flex;
     background-color: gainsboro;
     margin: 40px 134px 10px 260px;
@@ -226,28 +201,12 @@ footer {
     flex-direction: column;
     flex-wrap: wrap;
   }
-  main .boxNewslatter .formularioDecontacto {
-    display: flex;
+  body .boxNewslatter h2 {
+    text-align: center;
+    margin: 10px -28px 10px -23px;
   }
-  footer .listaPie1 ul {
+  body .boxNewslatter .formularioDecontacto {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 10px 10px 10px;
-  }
-  footer .listaPie2 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 10px 10px 10px;
-  }
-  footer .listaPie2 ul h2 {
-    display: flex;
-    flex-direction: column;
-  }
-  footer .direccion2 {
-    display: flex;
-    margin: -157px 0px 0px 0px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -259,7 +218,7 @@ footer {
     grid-template-columns: 384px 384px;
     grid-template-rows: 100px 300px auto 1fr;
   }
-  main .box {
+  body .box {
     display: inline-flex;
     background-color: gainsboro;
     margin: 53px 13px;
@@ -267,39 +226,33 @@ footer {
     box-shadow: 5px 5px 15px gray;
     overflow: hidden;
   }
-  main .imagenDelmain {
-    display: none;
-  }
-  main .box img {
+  body .box img {
     display: flex;
     align-items: center;
     margin: 28px 114px;
+    max-width: 100%;
+    object-fit: cover;
   }
-  main .imagenDelmain2 {
+  body .imagenDelmain,
+  body .imagenDelmain2,
+  body .imagenDelmain3 {
     display: none;
   }
-  main .imagenDelmain3 {
-    display: none;
-  }
-  main .textoDelmain p {
+  body .textoDelmain p {
     display: flex;
     width: 738px;
     text-align: justify;
   }
-  main .encabezadosDeseccion h1,
-  main .tituloDelapagina h1,
-  main .tituloDelapagina h2,
-  main .encabezadosDeseccion h2 {
+  body .encabezadosDeseccion h1,
+  body .tituloDelapagina h1,
+  body .tituloDelapagina h2,
+  body .encabezadosDeseccion h2 {
     display: flex;
     justify-content: center;
     margin-top: 40px;
     margin-bottom: 20px;
   }
-  .nav {
-    flex-direction: column;
-    background-color: #07371c;
-  }
-  main .boxNewslatter {
+  body .boxNewslatter {
     display: flex;
     background-color: gainsboro;
     margin: 40px 134px 10px 134px;
@@ -312,26 +265,26 @@ footer {
     flex-direction: column;
     flex-wrap: wrap;
   }
+  body .boxNewslatter h2 {
+    text-align: center;
+    margin: 10px -28px 10px -23px;
+  }
+  .nav {
+    flex-direction: column;
+    background-color: #07371c;
+  }
   .ultimoGpdisputado #img {
     width: 100%;
     height: 100%;
   }
-  img {
-    max-width: 100%;
-    object-fit: cover;
-  }
-  footer .listaPie1 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 10px 10px 10px;
-  }
+  footer .listaPie1 ul,
   footer .listaPie2 ul {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px 10px 10px 10px;
   }
+  footer .listaPie1 ul h2,
   footer .listaPie2 ul h2 {
     display: flex;
     flex-direction: column;
@@ -342,21 +295,19 @@ footer {
     grid-template-areas: "header" "nav" "nav" "main" "pie";
     grid-template-columns: 150px;
     grid-template-rows: 100px 1fr 1fr auto 1fr;
-  }
-  body {
     display: block;
   }
-  .tituloDelapagina {
+  body .tituloDelapagina {
     padding: 30px;
   }
-  .nav {
+  body .nav {
     flex-direction: column;
   }
-  .ultimoGpdisputado #img {
+  body .ultimoGpdisputado #img {
     width: 100%;
     height: 100%;
   }
-  main .box {
+  body .box {
     background-color: gainsboro;
     margin: 13px -138px 32px 38px;
     border-radius: 5px;
@@ -366,12 +317,22 @@ footer {
     justify-content: center;
     width: 340px;
   }
-  main .textoDelmain p {
+  body .box img {
+    display: flex;
+    align-items: center;
+    margin: 28px 114px;
+    max-width: 100%;
+    object-fit: cover;
+  }
+  body .imagenDelmain, body .imagenDelmain2, body .imagenDelmain3 {
+    display: none;
+  }
+  body .textoDelmain p {
     display: flex;
     width: 385px;
     text-align: justify;
   }
-  main .boxNewslatter {
+  body .boxNewslatter {
     display: flex;
     background-color: gainsboro;
     margin: 16px 215px 18px 11px;
@@ -384,54 +345,27 @@ footer {
     align-items: center;
     flex-direction: row;
   }
-  main .box img {
-    display: flex;
-    align-items: center;
-    margin: 28px 114px;
-  }
-  main .imagenDelmain {
-    display: none;
-  }
-  main .imagenDelmain2 {
-    display: none;
-  }
-  main .imagenDelmain3 {
-    display: none;
-  }
-  main .boxNewslatter .labelsDeformulario {
+  body .boxNewslatter .labelsDeformulario {
     display: flex;
     flex-direction: column;
     align-content: flex-end;
     margin: 49px 6px 15px 10px;
   }
-  section .boxNewslatter form {
+  body .boxNewslatter form {
     flex-flow: column;
     justify-content: center;
-  }
-  main .encabezadosDeseccion h2 {
-    display: flex;
-    font-size: large;
-  }
-  .box {
-    margin: 40px 35px 10px 35px;
   }
   img {
     max-width: 100%;
     object-fit: cover;
   }
-  footer .listaPie1 ul {
+  footer .listaPie1 ul, footer .listaPie2 ul {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px 10px 10px 10px;
   }
-  footer .listaPie2 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 10px 10px 10px;
-  }
-  footer .listaPie2 ul h2 {
+  footer .listaPie1 ul h2, footer .listaPie2 ul h2 {
     display: flex;
     flex-direction: column;
   }
@@ -483,19 +417,6 @@ main section .boxNewslatter .formularioDecontacto .labelsDeformulario {
   font-weight: 500;
 }
 
-main .box img {
-  width: 90px;
-  align-content: center;
-  padding: 5px 5px 5px 5px;
-  margin: 10px 50px 10px 50px;
-  object-fit: contain;
-}
-
-main h3 {
-  text-align: center;
-}
-
-/* Footer css */
 footer {
   display: flex;
   flex-direction: column;
@@ -504,341 +425,42 @@ footer {
   color: aliceblue;
   flex-wrap: nowrap;
 }
-
-footer a {
-  color: aliceblue;
-  text-decoration: none;
+footer .direccion {
+  display: flex;
+  align-items: center;
 }
-
+footer .direccion h4 {
+  display: flex;
+  align-items: center;
+}
+footer .direccion2 {
+  display: flex;
+  margin: -157px 0px 0px 0px;
+}
 footer ul li {
   display: flex;
   align-items: center;
   padding: 10px 10px 10px 10px;
   display: inline-block;
 }
-
+footer ul li img {
+  width: 50px;
+  object-fit: contain;
+}
 footer ul li .encabezadosDeseccion {
   display: flex;
   align-items: center;
   padding: 10px 10px 10px 10px;
   display: inline-block;
 }
-
-footer ul li img {
-  width: 50px;
-  object-fit: contain;
-}
-
-footer .direccion {
-  display: flex;
-  align-items: center;
-}
-
-footer .direccion2 {
-  display: flex;
-  margin: -157px 0px 0px 0px;
-}
-
-footer .direccion h4 {
-  display: flex;
-  align-items: center;
+footer a {
+  color: aliceblue;
+  text-decoration: none;
 }
 
 .noticias {
   background-color: gainsboro;
   margin: 5px;
-}
-
-body {
-  justify-content: center;
-  gap: 10px;
-  min-height: 100vh;
-  display: grid;
-  grid-template-areas: "header header header" "nav    nav    nav" "main   main   main" "pie    pie    pie";
-  grid-template-columns: 150px 1fr 150px;
-  grid-template-rows: 100px 1 1fr 100%;
-}
-
-@media screen and (max-width: 1024px) {
-  body {
-    grid-template-areas: "header header" "nav nav" "main main" "pie pie";
-    grid-template-columns: 512px 512px;
-    grid-template-rows: 150px 20px auto 1fr;
-  }
-  main .box {
-    display: inline-flex;
-    background-color: gainsboro;
-    margin: 53px 67px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 15px gray;
-    overflow: hidden;
-  }
-  main .textoDelmain p {
-    display: flex;
-    width: 388px;
-    text-align: justify;
-  }
-  main .imagenDelmain {
-    display: none;
-  }
-  main .imagenDelmain2 {
-    display: none;
-  }
-  main .imagenDelmain3 {
-    display: none;
-  }
-  .tituloDelapagina {
-    padding: 30px;
-  }
-  main .boxNewslatter h2 {
-    text-align: center;
-    margin: 10px -28px 10px -23px;
-  }
-  .nav {
-    flex-direction: column;
-    background-color: #07371c;
-  }
-  main .textoDelmain p {
-    display: flex;
-    text-align: justify;
-    width: 1000px;
-  }
-  main .encabezadosDeseccion h1,
-  main .tituloDelapagina h1,
-  main .tituloDelapagina h2,
-  main .encabezadosDeseccion h2 {
-    display: flex;
-    justify-content: center;
-    margin-top: 40px;
-    margin-bottom: 20px;
-  }
-  .ultimoGpdisputado #img {
-    width: 100%;
-    height: 100%;
-  }
-  main .box img {
-    display: flex;
-    align-items: center;
-    margin: 28px 114px;
-  }
-  img {
-    max-width: 100%;
-    object-fit: cover;
-  }
-  main .boxNewslatter {
-    display: flex;
-    background-color: gainsboro;
-    margin: 40px 134px 10px 260px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 15px gray;
-    overflow: hidden;
-    align-content: center;
-    width: 500px;
-    height: 500px;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-  footer .listaPie1 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 10px 10px 10px;
-  }
-  footer .listaPie2 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 10px 10px 10px;
-  }
-  footer .listaPie2 ul h2 {
-    display: flex;
-    flex-direction: column;
-  }
-  footer .direccion2 {
-    display: flex;
-    margin: -157px 0px 0px 0px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .tituloDelapagina {
-    padding: 10px;
-  }
-  body {
-    grid-template-areas: "header header" "nav nav" "main main" "pie pie";
-    grid-template-columns: 384px 384px;
-    grid-template-rows: 100px 300px auto 1fr;
-  }
-  main .box {
-    display: inline-flex;
-    background-color: gainsboro;
-    margin: 53px 13px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 15px gray;
-    overflow: hidden;
-  }
-  main .imagenDelmain {
-    display: none;
-  }
-  main .box img {
-    display: flex;
-    align-items: center;
-    margin: 28px 114px;
-  }
-  main .imagenDelmain2 {
-    display: none;
-  }
-  main .imagenDelmain3 {
-    display: none;
-  }
-  main .textoDelmain p {
-    display: flex;
-    width: 738px;
-    text-align: justify;
-  }
-  main .encabezadosDeseccion h1,
-  main .tituloDelapagina h1,
-  main .tituloDelapagina h2,
-  main .encabezadosDeseccion h2 {
-    display: flex;
-    justify-content: center;
-    margin-top: 40px;
-    margin-bottom: 20px;
-  }
-  .nav {
-    flex-direction: column;
-    background-color: #07371c;
-  }
-  main .boxNewslatter {
-    display: flex;
-    background-color: gainsboro;
-    margin: 40px 134px 10px 134px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 15px gray;
-    overflow: hidden;
-    align-content: center;
-    width: 500px;
-    height: 500px;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-  .ultimoGpdisputado #img {
-    width: 100%;
-    height: 100%;
-  }
-  img {
-    max-width: 100%;
-    object-fit: cover;
-  }
-  footer .listaPie1 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 10px 10px 10px;
-  }
-  footer .listaPie2 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 10px 10px 10px;
-  }
-  footer .listaPie2 ul h2 {
-    display: flex;
-    flex-direction: column;
-  }
-}
-@media screen and (max-width: 425px) {
-  body {
-    grid-template-areas: "header" "nav" "nav" "main" "pie";
-    grid-template-columns: 150px;
-    grid-template-rows: 100px 1fr 1fr auto 1fr;
-  }
-  body {
-    display: block;
-  }
-  .tituloDelapagina {
-    padding: 30px;
-  }
-  .nav {
-    flex-direction: column;
-  }
-  .ultimoGpdisputado #img {
-    width: 100%;
-    height: 100%;
-  }
-  main .box {
-    background-color: gainsboro;
-    margin: 13px -138px 32px 38px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 15px gray;
-    overflow: hidden;
-    align-items: center;
-    justify-content: center;
-    width: 340px;
-  }
-  main .textoDelmain p {
-    display: flex;
-    width: 385px;
-    text-align: justify;
-  }
-  main .boxNewslatter {
-    display: flex;
-    background-color: gainsboro;
-    margin: 16px 215px 18px 11px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 15px gray;
-    overflow: hidden;
-    align-content: flex-end;
-    width: 400px;
-    height: 480px;
-    align-items: center;
-    flex-direction: row;
-  }
-  main .box img {
-    display: flex;
-    align-items: center;
-    margin: 28px 114px;
-  }
-  main .imagenDelmain {
-    display: none;
-  }
-  main .imagenDelmain2 {
-    display: none;
-  }
-  main .imagenDelmain3 {
-    display: none;
-  }
-  main .boxNewslatter .labelsDeformulario {
-    display: flex;
-    flex-direction: column;
-    align-content: flex-end;
-  }
-  main .encabezadosDeseccion h2 {
-    display: flex;
-    font-size: large;
-  }
-  .box {
-    margin: 40px 35px 10px 35px;
-  }
-  img {
-    max-width: 100%;
-    object-fit: cover;
-  }
-  footer .listaPie1 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 10px 10px 10px;
-  }
-  footer .listaPie2 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 10px 10px 10px;
-  }
-  footer .listaPie2 ul h2 {
-    display: flex;
-    flex-direction: column;
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
